--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2 class="center">Front End Web Developer</h2>
         <div class="copy-container center">
         <p>
-          Hello.  I'm Jeremy, and I make web apps.  I'm motivated by building awesome products and solving hard problems.  I pride myself on writing readable code that works as well tomorrow as it does today.  I believe strongly in the value of open source software and share as much code as I can.  I work at YouTube.
+        Hello.  I'm Jeremy, and I make web apps.  I'm motivated by building awesome products and solving hard problems.  I pride myself on writing readable code that works as well tomorrow as it does today.  I believe strongly in the value of open source software and share as much code as I can.  I work at YouTube.  Email me at <strong><a href="mailto:jeremyckahn@gmail.com">jeremyckahn@gmail.com</a></strong>.
         </p>
       </div>
     </div>
@@ -30,6 +30,17 @@
         </li>
         <li>
           <h3>Past work</h3>
+          <ul class="additional-links">
+            <li>
+              <a href="http://www.cmegroup.com/investor-relations/annual-review/2010/" target="_blank">CME Group 2010 Annual Review</a>
+            </li>
+            <li>
+              <a href="http://media.corporate-ir.net/media_files/IROL/93/93125/ALL_AR_2010/index.html" target="_blank">Allstate 2010 Annual Report</a>
+            </li>
+            <li>
+              <a href="http://www.shopedropoff.com/" target="_blank">EDrop-Off</a>
+            </li>
+          </ul>
         </li>
         <li>
           <h3>Resume</h3>
