Adds link info.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="footer">
       <ul class="links center clearfix">
         <li>
-          <h3>Github</h3>
+        <h3><a href="https://github.com/jeremyckahn" target="_blank">Github</a></h3>
         </li>
         <li>
-          <h3>Twitter</h3>
+        <h3><a href="https://twitter.com/jeremyckahn" target="_blank">Twitter</a></h3>
         </li>
         <li>
           <h3>Past work</h3>
@@ -43,10 +43,10 @@
           </ul>
         </li>
         <li>
-          <h3>Resume</h3>
+        <h3><a href="http://www.jeremyckahn.com/downloads/jeremyKahnResume.pdf" target="_blank">Resume</a></h3>
         </li>
         <li>
-          <h3>Blog</h3>
+        <h3><a href="http://jeremyckahn.github.com/" target="_blank">Blog</a></h3>
         </li>
       </ul>
     </div>
