--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="http://media.corporate-ir.net/media_files/IROL/93/93125/ALL_AR_2010/index.html" target="_blank">Allstate 2010 Annual Report</a>
             </li>
             <li>
-              <a href="http://www.shopedropoff.com/" target="_blank">EDrop-Off</a>
+              <a href="http://www.kkr.com/ar/" target="_blank">KKR 2010 Annual Report</a>
             </li>
           </ul>
         </li>
