Updates resume link.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Jeremy Kahn</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
@@ -43,7 +42,7 @@
           </ul>
         </li>
         <li>
-          <h3><a href="http://files.jeremyckahn.com/resume.pdf" target="_blank">Resume</a></h3>
+          <h3><a href="http://files.jeremyckahn.com/jeremy_kahn_resume.pdf" target="_blank">Resume</a></h3>
         </li>
         <li>
           <h3><a href="http://jeremyckahn.github.com/" target="_blank">Blog</a></h3>
