Adds Stylie and Rekapi links.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2 class="center">Front End Web Developer</h2>
         <div class="copy-container center">
         <p>
-        Hello.  I'm Jeremy, and I make web apps.  I'm motivated by building awesome products and solving hard problems.  I pride myself on writing readable code that works as well tomorrow as it does today.  I believe strongly in the value of open source software and share as much code as I can.  I work at YouTube.  Email me at <strong><a href="mailto:jeremyckahn@gmail.com">jeremyckahn@gmail.com</a></strong>.
+        Hello.  I'm Jeremy, and I make web apps.  I'm motivated by building awesome products and solving hard problems.  I pride myself on writing readable code that works as well tomorrow as it does today.  I believe strongly in the value of open source software and share as much code as I can.  I work at YouTube.  My most interesting recent pet projects include <a href="http://jeremyckahn.github.com/stylie/" target="_blank">Stylie</a> and <a href="http://rekapi.com/" target="_blank">Rekapi</a>.  Drop me a line at <strong><a href="mailto:jeremyckahn@gmail.com">jeremyckahn@gmail.com</a></strong>.
         </p>
       </div>
     </div>
